8229406: ZGC: Fix incorrect statistics

Reviewed-by: pliden, eosterlund